--- a/index.html
+++ b/index.html
@@ -775,7 +775,8 @@
                                         <li>Dr J. Somasekar, Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr T R Mahesh, Associate Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr Manujakshi B C, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr N Suresh Kumar, Assistant Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr N Suresh Kumar, Associate Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr S Saravanakumar, Associate Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr C Chandrasekar, Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr Garima Sinha, Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr Sonal Sharma, Associate Professor, JAIN (Deemed-to-be University)</li>
@@ -1935,4 +1936,5 @@
 <!-- Mirrored from tempwebtest.github.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 02 Sep 2025 09:34:31 GMT -->
 
 </html>
+
 
