--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <h3 class="ff-merienda-one indigo-dye">International Conference on <br> Intelligent Computing
-                        Frontiers (ICICF)<span class="hdng-stl">&nbsp;</span></h3>
-                    <h5 class="text-uppercase nickel">(CSET-2026)</h5>
+                        Frontiers (ICICF - 2027)<span class="hdng-stl">&nbsp;</span></h3>
+               
                 </div>
             </div>
             <div class="row justify-content-center mt-3">
@@ -564,10 +564,10 @@
                         researchers, practitioners, and industry experts to explore the evolving frontiers of
                         intelligent computing. This multidisciplinary platform will cover emerging trends and
                         technologies in artificial intelligence, machine learning, data science, edge and cloud
-                        computing, IoT, cybersecurity, robotics, and intelligent systems. ICICF 2026 will foster
+                        computing, IoT, cybersecurity, robotics, and intelligent systems. ICICF 2027 will foster
                         collaboration across academia and industry, encouraging the exchange of innovative ideas,
                         cutting-edge research, and real-world applications that drive digital transformation. Join us in
-                        October 2026 to shape the future of intelligent technologies and explore the limitless
+                        January 2027 to shape the future of intelligent technologies and explore the limitless
                         possibilities of computational intelligence.</p>
                 </div>
             </div>
@@ -986,19 +986,19 @@
                             <tbody>
                                 <tr>
                                     <td>Submission Date</td>
-                                    <td>March 30th 2026</td>
+                                    <td>September 30th 2026</td>
                                 </tr>
                                 <tr>
                                     <td>Acceptance Notification</td>
-                                    <td>June 30th 2026</td>
+                                    <td>November 15th 2026</td>
                                 </tr>
                                 <tr>
                                     <td>Deadline for Final Papers & Registration</td>
-                                    <td>August 15th 2026</td>
+                                    <td>December 15th 2026</td>
                                 </tr>
                                 <tr>
                                     <td>Conference Date</td>
-                                    <td>October 16-18th 2026</td>
+                                    <td>January 21-23th 2027</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -1508,9 +1508,7 @@
             </div>
             <div class="row text-center">
                 <p>All accepted and presented papers will be submitted to IEEE Xplore. </p>
-                <p>Link of Approval from IEEE: <a
-                        href="https://conferences.ieee.org/conferences_events/conferences/conferencedetails/58993"
-                        target="_blank">Click here</a></p>
+                
             </div>
         </div>
     </section>
@@ -1936,5 +1934,6 @@
 <!-- Mirrored from tempwebtest.github.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 02 Sep 2025 09:34:31 GMT -->
 
 </html>
+
 
 
