--- a/index.html
+++ b/index.html
@@ -553,6 +553,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 text-center">
+                    <h3 class="ff-merienda-one indigo-dye">About Jain University<span class="hdng-stl">&nbsp;</span></h3>
+               
+                </div>
+            </div>
+            <div class="row justify-content-center mt-3">
+                <div class="col-md-10 text-md-center">
+                    <p>
+Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educational institution known for its excellence in higher education. With a strong emphasis on holistic development and innovative teaching methods, Jain (Deemed-to-be University) offers a wide range of undergraduate, postgraduate, and doctoral programs across various disciplines. The university is known for its state-of-the-art infrastructure, experienced faculty, and industry-relevant curriculum. It provides students with ample opportunities for research, internships, and industry collaborations, ensuring they are well-prepared for their future careers. Jain (Deemed- to-be University) is committed to nurturing talent, fostering creativity, and shaping leaders of tomorrow.
+                    </p>
+                </div>
+            <div class="row">
+                <div class="col-md-12 text-center">
                     <h3 class="ff-merienda-one indigo-dye">International Conference on <br> Intelligent Computing
                         Frontiers (ICICF - 2027)<span class="hdng-stl">&nbsp;</span></h3>
                
@@ -560,7 +572,7 @@
             </div>
             <div class="row justify-content-center mt-3">
                 <div class="col-md-10 text-md-center">
-                    <p>The International Conference on Intelligent Computing Frontiers (ICICF) aims to bring together
+                    <p>The International Conference on Intelligent Computing Frontiers (ICICF - 2027) aims to bring together
                         researchers, practitioners, and industry experts to explore the evolving frontiers of
                         intelligent computing. This multidisciplinary platform will cover emerging trends and
                         technologies in artificial intelligence, machine learning, data science, edge and cloud
@@ -1733,7 +1745,7 @@
                             <i class="far fa-hand-point-up"></i> Paper Submission Template</a>
                     </div>
                     <div class="col-4 text-center fxbgcl brrtftr">
-                        <a class="btn btn-primary28a" href="https://cmt3.research.microsoft.com/CSET2023"
+                        <a class="btn btn-primary28a" href="#"
                             target="_blank" rel="nofollow" role="button">
                             <i class="far fa-hand-point-up"></i> Submit Paper</a>
                     </div>
@@ -1934,6 +1946,7 @@
 <!-- Mirrored from tempwebtest.github.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 02 Sep 2025 09:34:31 GMT -->
 
 </html>
+
 
 
 
