--- a/index.html
+++ b/index.html
@@ -536,7 +536,7 @@
       </div> -->
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100 lazyload" data-src="https://i.postimg.cc/151HCGVc/BG.png" alt="Banner">
+                <img class="d-block w-100 lazyload" data-src="https://i.postimg.cc/3wqqBpMt/Banner.png" alt="Banner">
             </div>
         </div>
         <!--   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -1946,6 +1946,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
 <!-- Mirrored from tempwebtest.github.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 02 Sep 2025 09:34:31 GMT -->
 
 </html>
+
 
 
 
