--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 <!doctype html>
 <html lang="en">
-
-<!-- Mirrored from tempwebtest.github.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 02 Sep 2025 09:34:31 GMT -->
-<!-- Added by HTTrack -->
-<meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
-
+<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <!-- Required meta tags -->
@@ -1730,6 +1726,11 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
                                 href="https://www.jainuniversity.ac.in/" class="text-white text-decoration-none"
                                 target="_blank">JAIN (Deemed-to-be University)</a></span>
                     </p>
+                    <h5>
+                      <a href="https://set.jainuniversity.ac.in/" target="_blank">
+                        Jain University Official Website
+                      </a>
+                    </h5>
                 </div>
             </div>
             <span id="contact"></span>
@@ -1943,10 +1944,8 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
                 Downloader</a></font>
         </center>
 </body>
-
-<!-- Mirrored from tempwebtest.github.io/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 02 Sep 2025 09:34:31 GMT -->
-
 </html>
+
 
 
 
