--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
         <div class="container d-block">
             <div class="row">
                 <div class="col-md-4">
-                    <a class="navbar-brand" href="https://tempwebtest.github.io/index.html">
+                    <a class="navbar-brand" href="https://icicf-2027.vercel.app/">
                         <img src="https://tempwebtest.github.io/assets-folder/assets/images/Jain-logo.png"
                             class="img-fluid res-mob-logo" alt="logo">
                     </a>
@@ -1945,6 +1945,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
         </center>
 </body>
 </html>
+
 
 
 
