--- a/index.html
+++ b/index.html
@@ -1007,7 +1007,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
                                 </tr>
                                 <tr>
                                     <td>Conference Date</td>
-                                    <td>January 21-23th 2027</td>
+                                    <td>January 21st - 23rd 2027</td>
                                 </tr>
                             </tbody>
                         </table>
@@ -1945,6 +1945,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
         </center>
 </body>
 </html>
+
 
 
 
