--- a/index.html
+++ b/index.html
@@ -1064,63 +1064,48 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
         <div class="offcanvas offcanvas-bottom" tabindex="-1" id="arthurjamesswart"
             aria-labelledby="offcanvasBottomLabel">
             <div class="offcanvas-header">
-                <h5 class="offcanvas-title indigo-dye" id="offcanvasBottomLabel">Prof. Dr. Arthur James Swart <span
-                        class="text-secondary"> | </span>Central University of Technology, South Africa</h5>
+                <h5 class="offcanvas-title indigo-dye" id="offcanvasBottomLabel">Prof. Anil Jain<span
+                        class="text-secondary"> | </span>Michigan State University</h5>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                     aria-label="Close"></button>
             </div>
             <div class="offcanvas-body small">
-                <p>Prof. Arthur James Swart worked for Telkom SA and De Beers Namaqualand Mines for 4 years. He joined
-                    the Vaal University of Technology in 1995 and progressed from a technician to a senior lecturer in
-                    2007. He completed my MEd in 2007 and his DTech in 2011. He has always loved teaching, but his
-                    passion for research took time to develop! Research definitely affords one the opportunity to engage
-                    in life-long learning which will always remain his primary goal which he currently pursue at The
-                    Central University of Technology.</p>
+                <p>
+                    Prof. Anil Jain is a University Distinguished Professor in the Department of Electrical and Computer Engineering at Michigan State University.
+                    He is internationally renowned for his pioneering contributions to pattern recognition, biometric authentication, and computer vision.
+                    His research has had significant academic and real-world impact, influencing national security, forensics, and identity management systems worldwide.
+                </p>
             </div>
         </div>
         <div class="offcanvas offcanvas-bottom" tabindex="-1" id="simiBajaj" aria-labelledby="offcanvasBottomLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title indigo-dye" id="offcanvasBottomLabel">
-                    Prof. Dr. Simi Bajaj<span class="text-secondary"> | </span>Western Sydney University, Australia
+                    Dr. Dimitrios A. Karras<span class="text-secondary"> | </span>National and Kapodistrian University of Athens (NKUA), Greece
                 </h5>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                     aria-label="Close"></button>
             </div>
             <div class="offcanvas-body small">
                 <p>
-                    Dr. Simi is the Director of Information Systems Program and Deputy Associate Dean (International) at
-                    Western Sydney University. She specializes in Information Security, Machine Learning, and more. She
-                    serves on editorial boards, secured research grants of $2 million, and won the Excellence in
-                    Internationalisation Award in December 2022. Prof. Simi contributes to gender equity initiatives,
-                    reviews courses, and is an experienced program manager, approved TEQSA independent reviewer, and
-                    reviewer for various fields in UG and PG courses.
-                </p>
-                <p>
-                    She serves on the University's SAGE (Science in Australia Gender Equity) Self-Assessment Team and
-                    EDWP Equity and Diversity Working Party for the School of Computer, Data, and Mathematical Sciences
-                    at WSU.
+                    Dr. Dimitrios A. Karras is a faculty member at the National and Kapodistrian University of Athens (NKUA), Greece.
+                    He is recognized for his research contributions in artificial intelligence, machine learning, signal processing, and complex system modeling.
+                    His work spans both academic research and applied technologies, with publications in reputable international journals and conferences.
                 </p>
             </div>
         </div>
         <div class="offcanvas offcanvas-bottom" tabindex="-1" id="ganhongseng" aria-labelledby="offcanvasBottomLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title indigo-dye" id="offcanvasBottomLabel">
-                    Prof. Dr. Gan Hong Seng<span class="text-secondary"> | </span>XJTLU Entrepreneur College (Taicang),
-                    Xi'an Jiaotong - Liverpool University
+                    Jawahar C V <span class="text-secondary"> | </span>International Institute of Information Technology, Hyderabad.
                 </h5>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                     aria-label="Close"></button>
             </div>
             <div class="offcanvas-body small">
                 <p>
-                    Dr. Gan received his PhD degree in Biomedical Engineering from University
-                    Teknologi Malaysia in 2016. He works as an Associate Professor at the School
-                    of Artificial Intelligence and Advanced Computing, XJTLU Entrepreneur College (Taicang).
-                </p>
-                <p>
-                    He was the recipient of the JSPS Invitational Fellowship in 2018. Currently,
-                    he is a member of Young Scientist Network-Academy Science Malaysia and Adjunct
-                    Professor at SRM Institute of Science and Technology, India.
+                    Jawahar C. V is a Professor, Dean of Research and Development, and Amazon Chair Professor based in Hyderabad.
+                    He holds a Ph.D. from IIT Kharagpur and is a leading researcher in computer vision, machine learning, and document image analysis.
+                    His work has significantly contributed to both academic research and industry-driven innovation in artificial intelligence.
                 </p>
             </div>
         </div>
@@ -1945,6 +1930,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
         </center>
 </body>
 </html>
+
 
 
 
