--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
             </div>
             <div class="row justify-content-center mt-3">
                 <div class="col-md-10 text-md-center">
-                    <p>
+                    <p style="text-align: justify;">
 Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educational institution known for its excellence in higher education. With a strong emphasis on holistic development and innovative teaching methods, Jain (Deemed-to-be University) offers a wide range of undergraduate, postgraduate, and doctoral programs across various disciplines. The university is known for its state-of-the-art infrastructure, experienced faculty, and industry-relevant curriculum. It provides students with ample opportunities for research, internships, and industry collaborations, ensuring they are well-prepared for their future careers. Jain (Deemed- to-be University) is committed to nurturing talent, fostering creativity, and shaping leaders of tomorrow.
                     </p>
                 </div>
@@ -569,7 +569,8 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
             </div>
             <div class="row justify-content-center mt-3">
                 <div class="col-md-10 text-md-center">
-                    <p>The International Conference on Intelligent Computing Frontiers (ICICF - 2027) aims to bring together
+                    <p style="text-align: justify;">
+                        The International Conference on Intelligent Computing Frontiers (ICICF - 2027) aims to bring together
                         researchers, practitioners, and industry experts to explore the evolving frontiers of
                         intelligent computing. This multidisciplinary platform will cover emerging trends and
                         technologies in artificial intelligence, machine learning, data science, edge and cloud
@@ -1930,6 +1931,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
         </center>
 </body>
 </html>
+
 
 
 
