--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
             <div class="row justify-content-center mt-3">
                 <div class="col-md-10 text-md-center">
                     <p style="text-align: justify;">
-Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educational institution known for its excellence in higher education. With a strong emphasis on holistic development and innovative teaching methods, Jain (Deemed-to-be University) offers a wide range of undergraduate, postgraduate, and doctoral programs across various disciplines. The university is known for its state-of-the-art infrastructure, experienced faculty, and industry-relevant curriculum. It provides students with ample opportunities for research, internships, and industry collaborations, ensuring they are well-prepared for their future careers. Jain (Deemed- to-be University) is committed to nurturing talent, fostering creativity, and shaping leaders of tomorrow.
+                        Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educational institution known for its excellence in higher education. With a strong emphasis on holistic development and innovative teaching methods, It offers a wide range of undergraduate, postgraduate, and doctoral programs across various disciplines. The university is known for its state-of-the-art infrastructure, experienced faculty, and industry-relevant curriculum. It provides students with ample opportunities for research, internships, and industry collaborations, ensuring they are well-prepared for their future careers. Jain University is committed to nurturing talent, fostering creativity, and shaping leaders of tomorrow.
                     </p>
                 </div>
             <div class="row">
@@ -659,7 +659,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
                                         Associate Professor, CTO COGNIX<br>
                                         Department of Computer Science and Information Systems,<br>
                                         Birla Institute of Technology and Science Pilani, Pilani Campus,<br>
-                                        Rajasthan, INDIA 333031
+                                        Rajasthan, India.
                                     </h6>
                                 </div>
                             </div>
@@ -669,7 +669,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
                                     <h6>
                                         Associate Professor<br>
                                         School of Computing and Electrical Engineering (SCEE)<br>
-                                        Indian Institute of Technology, Mandi
+                                        Indian Institute of Technology, IIT Mandi.
                                     </h6>
                                 </div>
                             </div>
@@ -679,7 +679,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
                                     <h6>
                                         Professor<br>
                                         Indian Institute of Technology Delhi (IIT Delhi)<br>
-                                        Hauz Khas, New Delhi, INDIA 110016
+                                        Hauz Khas, New Delhi, India
                                     </h6>
 
                                 </div>
@@ -732,7 +732,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
                                 <div class="border text-md-center p-3">
                                     <h5><b>Dr. Utku Kose </b></h5>
                                     <h6>
-                                        Professor, Suleyman Demirel University, <br> West Campus, 32260, Turkey
+                                        Professor, Suleyman Demirel University, <br> West Campus, Turkey
                                     </h6>
 
                                 </div>
@@ -798,12 +798,12 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
                                         <li>Dr Vikram N, Associate Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Prof Vivekananda Mukherjee, Indian Institute of Technology (ISM) Dhanbad
                                         </li>
-                                        <li>Dr. N. V. Kousik, Arden University, United Kingdom</li>
-                                        <li>Dr. R. Kumar, National Institute of Technology, Nagaland, India</li>
-                                        <li>Dr. M. Vasim Babu, Anna University, MIT Campus</li>
-                                        <li>Dr. Suresh Chavhan, Indian Institute of Information Technology, Raichur,
+                                        <li>Dr N. V. Kousik, Arden University, United Kingdom</li>
+                                        <li>Dr R. Kumar, National Institute of Technology, Nagaland, India</li>
+                                        <li>Dr M. Vasim Babu, Anna University, MIT Campus, India</li>
+                                        <li>Dr Suresh Chavhan, Indian Institute of Information Technology, Raichur,
                                             India</li>
-                                        <li>Dr. N. Srinivas Naik, Indian Institute of Information Technology, Kurnool,
+                                        <li>Dr N. Srinivas Naik, Indian Institute of Information Technology, Kurnool,
                                             India</li>
                                     </ul>
                                 </div>
@@ -1931,6 +1931,7 @@ Jain (Deemed-to-be University), located in Bengaluru South, is a renowned educat
         </center>
 </body>
 </html>
+
 
 
 
