--- a/index.html
+++ b/index.html
@@ -782,7 +782,7 @@
                                         </li>
                                         <li>Dr Benaka Prasad S B, Deputy Dean (Student), JAIN (Deemed-to-be University)
                                         </li>
-                                        <li>Dr J. Somasekar, Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr J Somasekar, Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr T R Mahesh, Associate Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr Manujakshi B C, Associate Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Dr N Suresh Kumar, Associate Professor, JAIN (Deemed-to-be University)</li>
@@ -798,12 +798,12 @@
                                         <li>Dr Vikram N, Associate Professor, JAIN (Deemed-to-be University)</li>
                                         <li>Prof Vivekananda Mukherjee, Indian Institute of Technology (ISM) Dhanbad
                                         </li>
-                                        <li>Dr N. V. Kousik, Arden University, United Kingdom</li>
-                                        <li>Dr R. Kumar, National Institute of Technology, Nagaland, India</li>
-                                        <li>Dr M. Vasim Babu, Anna University, MIT Campus, India</li>
+                                        <li>Dr N V Kousik, Arden University, United Kingdom</li>
+                                        <li>Dr R Kumar, National Institute of Technology, Nagaland, India</li>
+                                        <li>Dr M Vasim Babu, Anna University, MIT Campus, India</li>
                                         <li>Dr Suresh Chavhan, Indian Institute of Information Technology, Raichur,
                                             India</li>
-                                        <li>Dr N. Srinivas Naik, Indian Institute of Information Technology, Kurnool,
+                                        <li>Dr N Srinivas Naik, Indian Institute of Information Technology, Kurnool,
                                             India</li>
                                     </ul>
                                 </div>
@@ -1931,6 +1931,7 @@
         </center>
 </body>
 </html>
+
 
 
 
