--- a/index.html
+++ b/index.html
@@ -778,33 +778,28 @@
                                 data-bs-parent="#accordionExample">
                                 <div class="accordion-body">
                                     <ul>
-                                        <li>Dr Venkadeswaran K, Deputy Dean (Academic), JAIN (Deemed-to-be University)
-                                        </li>
-                                        <li>Dr Benaka Prasad S B, Deputy Dean (Student), JAIN (Deemed-to-be University)
-                                        </li>
-                                        <li>Dr J Somasekar, Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr T R Mahesh, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr Manujakshi B C, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr N Suresh Kumar, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr S Saravanakumar, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr C Chandrasekar, Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr Garima Sinha, Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr Sonal Sharma, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr Sunanda Das, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr A Rajesh, Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr Rajinikanta M, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr T Sivashankar, Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr Deveraj Verma, Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Dr Vikram N, Associate Professor, JAIN (Deemed-to-be University)</li>
-                                        <li>Prof Vivekananda Mukherjee, Indian Institute of Technology (ISM) Dhanbad
-                                        </li>
-                                        <li>Dr N V Kousik, Arden University, United Kingdom</li>
-                                        <li>Dr R Kumar, National Institute of Technology, Nagaland, India</li>
-                                        <li>Dr M Vasim Babu, Anna University, MIT Campus, India</li>
-                                        <li>Dr Suresh Chavhan, Indian Institute of Information Technology, Raichur,
-                                            India</li>
-                                        <li>Dr N Srinivas Naik, Indian Institute of Information Technology, Kurnool,
-                                            India</li>
+                                        <li>Dr. Venkadeswaran K, Deputy Dean (Academic), JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. Benaka Prasad S B, Deputy Dean (Student), JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. J Somasekar, Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. T R Mahesh, Associate Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. Manujakshi B C, Associate Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. N Suresh Kumar, Associate Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. S Saravanakumar, Associate Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. C Chandrasekar, Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. Garima Sinha, Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. Sonal Sharma, Associate Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. Sunanda Das, Associate Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. A Rajesh, Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. Rajinikanta M, Associate Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. T Sivashankar, Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. Deveraj Verma, Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Dr. Vikram N, Associate Professor, JAIN (Deemed-to-be University)</li>
+                                        <li>Prof. Vivekananda Mukherjee, Indian Institute of Technology (ISM), Dhanbad</li>
+                                        <li>Dr. N V Kousik, Arden University, United Kingdom</li>
+                                        <li>Dr. R Kumar, National Institute of Technology, Nagaland, India</li>
+                                        <li>Dr. M Vasim Babu, Anna University, MIT Campus, India</li>
+                                        <li>Dr. Suresh Chavhan, Indian Institute of Information Technology, Raichur, India</li>
+                                        <li>Dr. N Srinivas Naik, Indian Institute of Information Technology, Kurnool, India</li> 
                                     </ul>
                                 </div>
                             </div>
@@ -821,7 +816,7 @@
                                 <div class="accordion-body">
                                     <ul>
                                         <li>Anil Jain, University Distinguished Professor - Electrical and Computer
-                                            Engineering (ECE) in the College of Engineering, Michigan State University
+                                            Engineering (ECE) in the College of Engineering, Michigan State University, United States
                                         </li>
                                         <li>Vincenzo Piuri, Senior Member- IEEE, Department of Computer Science,
                                             Università degli Studi di Milano, Via Celoria 18 - 20133 Milano (MI), Italy
@@ -1032,7 +1027,7 @@
                             data-src="https://i.postimg.cc/W4FYR99t/Anil-Jain.jpg" alt="">
                         <h6><b>Prof. Anil Jain</b></h6>
                         <p>University Distinguished Professor - Electrical and Computer Engineering (ECE) in the College
-                            of Engineering, Michigan State University</p>
+                            of Engineering, Michigan State University, United States</p>
                         <a class="btn btn-primary btn-sm" href="#" role="button" data-bs-toggle="offcanvas"
                             data-bs-target="#arthurjamesswart" aria-controls="offcanvasBottom">Read More</a>
                     </div>
@@ -1066,13 +1061,13 @@
             aria-labelledby="offcanvasBottomLabel">
             <div class="offcanvas-header">
                 <h5 class="offcanvas-title indigo-dye" id="offcanvasBottomLabel">Prof. Anil Jain<span
-                        class="text-secondary"> | </span>Michigan State University</h5>
+                        class="text-secondary"> | </span>Michigan State University, United States</h5>
                 <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
                     aria-label="Close"></button>
             </div>
             <div class="offcanvas-body small">
                 <p>
-                    Prof. Anil Jain is a University Distinguished Professor in the Department of Electrical and Computer Engineering at Michigan State University.
+                    Prof. Anil Jain is a University Distinguished Professor in the Department of Electrical and Computer Engineering at Michigan State University, United States.
                     He is internationally renowned for his pioneering contributions to pattern recognition, biometric authentication, and computer vision.
                     His research has had significant academic and real-world impact, influencing national security, forensics, and identity management systems worldwide.
                 </p>
@@ -1931,6 +1926,7 @@
         </center>
 </body>
 </html>
+
 
 
 
